# src/docs/openApi.yaml
@@ -210,6 +210,35 @@ paths:
         500:
           description: Server error.
 
+  /hard-code/migrate:
+    post:
+      security:
+        - bearerAuth: []
+      tags:
+        - HardCode
+      summary: To manage migrations on the server.
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              required:
+                - param
+              properties:
+                param:
+                  type: string
+                  description: param "start"|"undo"
+                  example: "start"
+      responses:
+        200:
+          description: Migration complite.
+        401:
+          description: Not authorized.
+        500:
+          description: Server error.
+
+
 components:
   securitySchemes:
     bearerAuth:
