# src/hard_code/routes.ts
@@ -1,0 +1,7 @@
+import * as express from "express";
+
+import { authMiddleware } from "../middlewares/auth.middeleware";
+import { managmentMigrate } from "./controller";
+
+export const hardCode: express.IRouter = express.Router();
+hardCode.post("/migrate", authMiddleware, managmentMigrate);
